# ndv

./: CMakeLists.txt  README.md  TODO.md  main.cpp
cmake/: FetchContent_MakeAvailable.cmake  doctest.cmake  doctestAddTests.cmake
old/: vec.h  vec.inl
src/: CMakeLists.txt
src/ndv/: comparison.h  dummy.cpp  geometric.h  mat.h  quat.h  str_helper.h  template_utils.h  transform.h  vec.cpp  vec.h
src/ndv/vec/: vec2.cpp  vec2.h
tests/: CMakeLists.txt  test_mat.cpp  test_quat.cpp  test_vec.cpp
